.nodeshift/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-configmap-redhat
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
