.nodeshift/route.yml
apiVersion: v1
kind: Route
metadata:
  name: nodejs-configmap-redhat
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nodejs-configmap-redhat
